--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,14 @@
     <title>StudioHQ</title>
     <meta name="description" content="Studio management web application">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://use.typekit.net/nms7hhe.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <header>
       <h1>StudioHQ</h1>
+      <img src="images/logo.svg" alt="StudioHQ logo">
     </header>
     <main>
       <h2>Happy Dance & Music</h2>
