Added icons to project

--- a/app/index.html
+++ b/app/index.html
@@ -23,13 +23,13 @@
       </ul>
       <nav>
         <ul>
-          <li><a href="">Dashboard</a></li>
-          <li><a href="">Classes</a></li>
-          <li><a href="">Students</a></li>
-          <li><a href="">Payment</a></li>
-          <li><a href="">Staff</a></li>
-          <li><a href="">Settings</a></li>
-          <li><a href="">Log Out</a></li>
+          <li><a href=""><span class="icon-dashboard"></span>Dashboard</a></li>
+          <li><a href=""><span class="icon-classes"></span>Classes</a></li>
+          <li><a href=""><span class="icon-students"></span>Students</a></li>
+          <li><a href=""><span class="icon-payment"></span>Payment</a></li>
+          <li><a href=""><span class="icon-staff"></span>Staff</a></li>
+          <li><a href=""><span class="icon-settings"></span>Settings</a></li>
+          <li><a href=""><span class="icon-logout"></span>Log Out</a></li>
         </ul>
       </nav>
       <section>
@@ -72,7 +72,7 @@
             <a href="">Seattle, 5th & Pine</a>
           </li>
         </ul>
-        <a href="">Create New Location</a>
+        <a href=""><span class="icon-plus"></span>Create New Location</a>
         <button>Cancel</button>
         <button>Save Changes</button>
       </section>
