Add firefly meme

--- a/app/index.html
+++ b/app/index.html
@@ -121,6 +121,9 @@
             </button>
           </div>
         </section>
+        <section data-ng-if="settingsctrl.view !== 'locations'" class="other">
+          <img src="images/firefly.jpg">
+        </section>
       </section>
     </main>
     <script src="js/main.js"></script>
