Fix styling bug

--- a/app/index.html
+++ b/app/index.html
@@ -102,7 +102,7 @@
               </location-form>
 
             </li>
-            <li class="location-item">
+            <li class="location-item create">
               <a href="#/settings/locations/create"><span class="icon-plus"></span>Create New Location</a>
             </li>
           </ul>
